# repo-intel

./: .env.example  .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
src/repo_intel/: __init__.py  cli.py  diff.py  glue_bundle.py  llm.py  markdown_bundle.py  settings.py
tests/: test_package.py
